code for problem 3, and export csv at the end

--- a/p8105_hw2_lw3061.md
+++ b/p8105_hw2_lw3061.md
@@ -50,7 +50,7 @@ dimension, range of years, and names of key variables).
 
 # Problem 2
 
-Read and clean the Mr. Trash Wheel sheet.
+### Read and clean the Mr. Trash Wheel sheet.
 
 1)  specify the sheet and omit rows with notes/figures and columns with
     notes
@@ -162,27 +162,115 @@ was 8.1 tons.
 
 # Problem 3
 
-## Import, clean, and tidy the dataset of baseline demographics.
+### Import and clean MCI data.
 
-Ensure that sex and APOE4 carrier status are appropriate encoded
-(i.e. not numeric), and remove any participants who do not meet the
-stated inclusion criteria (i.e. no MCI at baseline).
+1)  import the data and clean names
 
-Discuss important steps in the import process and relevant features of
-the dataset.
+``` r
+baseline_df = 
+  read_csv("data_mci/MCI_baseline.csv", skip=1) |>
+  janitor::clean_names() 
+```
 
-How many participants were recruited, and of these how many develop MCI?
+    ## Rows: 483 Columns: 6
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (1): Age at onset
+    ## dbl (5): ID, Current Age, Sex, Education, apoe4
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
-What is the average baseline age? What proportion of women in the study
-are APOE4 carriers?
+The data currently has 483 observations.
 
-## Similarly, import, clean, and tidy the dataset of longitudinally observed biomarker values;
+2)  recode variables and remove participants who did not have an age of
+    onset of MCI
 
-comment on the steps on the import process and the features of the
-dataset.
+``` r
+baseline_df = baseline_df |>
+  mutate(
+    sex = as.character(sex),
+    sex = case_match(sex, 
+                     "0" ~ "Female",
+                     "1" ~ "Male"),
+    apoe4 = as.character(apoe4),
+    apoe4 = case_match(apoe4,
+                       "0" ~ "Non-carrier",
+                       "1" ~ "Carrier"),
+    id = as.character(id)
+        ) |>
+  filter(age_at_onset!=".") 
+```
 
-## Check whether some participants appear in only the baseline or amyloid datasets, and comment on your findings.
+The number of observations that had an age of onset for MCI was 97.
 
-## Combine the demographic and biomarker datasets so that only participants who appear in both datasets are retained, and briefly describe the resulting dataset;
+The average baseline age of this final dataset was 65.61 years.
 
-export the result as a CSV to your data directory
+The proportion of women in the study who were APOE4 carriers was 0.65.
+
+3)  import, clean, and tidy the biomarkers csv
+
+``` r
+amyloid_df = 
+  read_csv("data_mci/mci_amyloid.csv", skip=1) |>
+  janitor::clean_names()
+```
+
+    ## Rows: 487 Columns: 6
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (5): Baseline, Time 2, Time 4, Time 6, Time 8
+    ## dbl (1): Study ID
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+Before cleaning out missing time values, the total number of
+observations in the amyloid dataset is 487.
+
+``` r
+amyloid_df = amyloid_df |>
+  drop_na() |>
+  rename(id=study_id) |>
+  mutate(
+    id = as.character(id)
+  )
+```
+
+After dropping missing values, the number of observations is 347.
+
+4)  see which participants appear in which datasets, and then combine
+    them and only retain participants in both.
+
+``` r
+anti_combine_1 = 
+  anti_join(baseline_df, amyloid_df, by="id")
+
+anti_combine_2 = 
+  anti_join(amyloid_df, baseline_df, by="id")
+```
+
+31 participants only appeared in the baseline dataset, and 281
+participants only appeared in the amyloid dataset.
+
+``` r
+mci_amyloid_combine = 
+  inner_join(baseline_df, amyloid_df, by="id")
+```
+
+The final tidied dataset combining baseline and amyloid data only had
+full data for 66 participants.
+
+The average age at baseline for this group was 65.83 years, and the
+average age of onset for MCI was NA.
+
+Of these participants, 33 were women.
+
+The proportion of participants who were carriers of the APOE4 variant
+was 0.58.
+
+5)  Export the data to the directory.
+
+``` r
+write_csv(mci_amyloid_combine, "data_mci/combined_mci_amyloid.csv")
+```
