--- a/p8105_hw2_lw3061.md
+++ b/p8105_hw2_lw3061.md
@@ -24,29 +24,118 @@ library(readxl)
 
 # Problem 1
 
-## clean data in pols-month.csv
+## Merge some FiveThirtyEight datasets together.
 
-Use separate() to break up the variable mon into integer variables year,
-month, and day; replace month number with month name; create a president
-variable taking values gop and dem, and remove prez_dem and prez_gop;
-and remove the day variable.
+1)  clean the data in `pols-month.csv`
 
-## clean data in snp.csv
+``` r
+pols_month_df = 
+  read_csv("fivethirtyeight_datasets/pols-month.csv") |>
+  janitor::clean_names() |>
+  separate(mon, c("year", "month", "day")) |>
+  mutate(
+    month = case_match(month,
+                       "10" ~ "October",
+                      "11" ~ "November",
+                       "12" ~ "December",
+                      "01" ~ "January",
+                      "02" ~ "February",
+                      "03" ~ "March",
+                      "04" ~ "April",
+                      "05" ~ "May",
+                      "06" ~ "June",
+                      "07" ~ "July",
+                      "08" ~ "August",
+                      "9" ~ "September"),
+    president = case_match(prez_dem, 
+                           1 ~ "dem",
+                           0 ~ "gop"),
+    year = as.numeric(year)
+  ) |>
+  select(c(-prez_dem, -prez_gop, -day)) |> 
+  arrange(year, month)
+```
 
-arrange according to year and month, and organize so that year and month
-are the leading columns.
+    ## Rows: 822 Columns: 9
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl  (8): prez_gop, gov_gop, sen_gop, rep_gop, prez_dem, gov_dem, sen_dem, r...
+    ## date (1): mon
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
-## tidy unemployment data
+2)  clean the data in `snp.csv` (solution adapted from posted solutions)
 
-this process will involve switching from “wide” to “long” format;
-ensuring that key variables have the same name; and ensuring that key
-variables take the same values.
+``` r
+snp_df = 
+  read_csv("fivethirtyeight_datasets/snp.csv") |>
+  separate(date, into = c("month", "day", "year"), convert = TRUE) |>
+  arrange(year, month) |>
+  mutate(month = month.name[month]) |>
+  select(year, month, close) 
+```
 
-## merge snp and pols and merge unemployment into the result
+    ## Rows: 787 Columns: 2
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (1): date
+    ## dbl (1): close
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
-Write a short paragraph about these datasets. Explain briefly what each
-dataset contained, and describe the resulting dataset (e.g. give the
-dimension, range of years, and names of key variables).
+3)  do the same with `unemployment` (solution adapted from posted
+    solutions)
+
+``` r
+months = 
+  tibble(
+    month_num = 1:12,
+    month_abb = month.abb,
+    month = month.name
+  )
+
+unemployment_df = 
+  read_csv("fivethirtyeight_datasets/unemployment.csv") |>
+  rename(year = Year) |>
+  pivot_longer(
+    Jan:Dec, 
+    names_to = "month_abb",
+    values_to = "unemployment"
+  ) |> 
+  left_join(x = _, y = months) |> 
+  select(year, month, unemployment)
+```
+
+    ## Rows: 68 Columns: 13
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (13): Year, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+    ## Joining with `by = join_by(month_abb)`
+
+4)  join datasets by merging (solution adapted from posted solutions)
+
+``` r
+merge538 = 
+  left_join(pols_month_df, snp_df) |>
+  left_join(x = _, y = unemployment_df)
+```
+
+    ## Joining with `by = join_by(year, month)`
+    ## Joining with `by = join_by(year, month)`
+
+The dataset `pols_month_df` contained data about the political parties
+in office at specific times, with 822 observations and 9 variables.
+`snp_df` had 787observations and 3 variables, and `unemployment_df` had
+816 observations and 3 variables.
+
+The final merged dataset gives information about the president,
+governors, representatives, and senators in office at specific times
+between 1945 and 2015, as well as information about unemployment rates.
 
 # Problem 2
 
