--- a/p8105_hw2_lw3061.md
+++ b/p8105_hw2_lw3061.md
@@ -146,9 +146,9 @@ between 1945 and 2015, as well as information about unemployment rates.
 
 ``` r
 mrtrash_df = 
-  read_excel("202207 Trash Wheel Collection Data.xlsx", 
+  read_excel("202309 Trash Wheel Collection Data.xlsx", 
              sheet="Mr. Trash Wheel", 
-             range="A2:M549")
+             range="A2:M586")
 ```
 
 2)  clean and update the data to include a new `homes_powered` variable.
@@ -167,9 +167,9 @@ mrtrash_df =
 
 ``` r
 proftrash_df =
-  read_excel("202207 Trash Wheel Collection Data.xlsx", 
+  read_excel("202309 Trash Wheel Collection Data.xlsx", 
              sheet="Professor Trash Wheel", 
-             range="A2:L96") |>
+             range="A2:L108") |>
   janitor::clean_names() |>
   mutate(kilowatts = weight_tons * 500,
          homes_powered = kilowatts / 30,
@@ -179,7 +179,7 @@ proftrash_df =
 proftrash_df
 ```
 
-    ## # A tibble: 94 × 15
+    ## # A tibble: 106 × 15
     ##    dumpster month    year  date                weight_tons volume_cubic_yards
     ##       <dbl> <chr>    <chr> <dttm>                    <dbl>              <dbl>
     ##  1        1 January  2017  2017-01-02 00:00:00        1.79                 15
@@ -192,16 +192,16 @@ proftrash_df
     ##  8        8 April    2017  2017-04-20 00:00:00        2.37                 15
     ##  9        9 May      2017  2017-05-10 00:00:00        2.64                 15
     ## 10       10 May      2017  2017-05-26 00:00:00        2.78                 15
-    ## # ℹ 84 more rows
+    ## # ℹ 96 more rows
     ## # ℹ 9 more variables: plastic_bottles <dbl>, polystyrene <dbl>,
-    ## #   cigarette_butts <dbl>, glass_bottles <dbl>, grocery_bags <dbl>,
-    ## #   chip_bags <dbl>, kilowatts <dbl>, homes_powered <dbl>, name <chr>
+    ## #   cigarette_butts <dbl>, glass_bottles <dbl>, plastic_bags <dbl>,
+    ## #   wrappers <dbl>, kilowatts <dbl>, homes_powered <dbl>, name <chr>
 
 ``` r
 gwynnda_df = 
-  read_excel("202207 Trash Wheel Collection Data.xlsx", 
+  read_excel("202309 Trash Wheel Collection Data.xlsx", 
              sheet="Gwynnda Trash Wheel", 
-             range="A2:J108") |>
+             range="A2:K157") |>
   janitor::clean_names() |>
   mutate(kilowatts = weight_tons * 500,
          homes_powered = kilowatts / 30,
@@ -211,7 +211,7 @@ gwynnda_df =
 gwynnda_df
 ```
 
-    ## # A tibble: 106 × 13
+    ## # A tibble: 155 × 14
     ##    dumpster month  year  date                weight_tons volume_cubic_yards
     ##       <dbl> <chr>  <chr> <dttm>                    <dbl>              <dbl>
     ##  1        1 July   2021  2021-07-03 00:00:00        0.93                 15
@@ -224,9 +224,9 @@ gwynnda_df
     ##  8        8 August 2021  2021-08-16 00:00:00        2.16                 15
     ##  9        9 August 2021  2021-08-16 00:00:00        2.6                  15
     ## 10       10 August 2021  2021-08-17 00:00:00        3.21                 15
-    ## # ℹ 96 more rows
-    ## # ℹ 7 more variables: plastic_bottles <dbl>, polystyrene <dbl>,
-    ## #   cigarette_butts <dbl>, plastic_bags <dbl>, kilowatts <dbl>,
+    ## # ℹ 145 more rows
+    ## # ℹ 8 more variables: plastic_bottles <dbl>, polystyrene <dbl>,
+    ## #   cigarette_butts <dbl>, plastic_bags <dbl>, wrappers <dbl>, kilowatts <dbl>,
     ## #   homes_powered <dbl>, name <chr>
 
 ``` r
@@ -235,15 +235,15 @@ trashwheels_tidy_df =
   janitor::clean_names()
 ```
 
-The final tidied dataset with all 3 trash wheels incorporated has 17
-columns (variables) and 747 rows (observations).
+The final tidied dataset with all 3 trash wheels incorporated has 16
+columns (variables) and 845 rows (observations).
 
 Key variables are `weight_tons`, `homes_powered`, `dumpster`, and
 `month`/`year`/`date`. Some of the most popular trash items were
 `cigarette_butts`, `plastic_bottles`, and `polystyrene`, but others like
 `sports_balls` and `plastic_bags` were also present.
 
-The total weight of trash collected by Professor Trash Wheel was 190.12
+The total weight of trash collected by Professor Trash Wheel was 216.26
 tons.
 
 The total number of cigarette butts collected by Gwynnda in July 2021
