fixed minor errors in problem 2

--- a/p8105_hw2_lw3061.md
+++ b/p8105_hw2_lw3061.md
@@ -247,7 +247,7 @@ The total weight of trash collected by Professor Trash Wheel was 216.26
 tons.
 
 The total number of cigarette butts collected by Gwynnda in July 2021
-was 8.1 tons.
+was 1.63^{4}.
 
 # Problem 3
 
